# TF2-Worst-Logs-Finder

./: CMakeLists.txt  CMakePresets.json  README.md  TF2API.cpp  TF2API.hpp  TODO.txt  about.htm  index.htm  main.cpp  styles.css
static/: about.html  index.html  script.js  styles.css
